# pars

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
pa/: CMakeLists.txt  readme.md
pa/include/pa/math/: index.hpp  integral_curves.hpp  integrators.hpp  linear_interpolate.hpp  particle.hpp  prime_factorize.hpp  scalar_field.hpp  selection.hpp  tensor_field.hpp  types.hpp  vector_field.hpp
pa/include/pa/math/convert/: angles.hpp  coordinates.hpp
pa/include/pa/stages/: color_generator.hpp  data_io.hpp  data_loader.hpp  flow_map_generator.hpp  ftle_map_generator.hpp  index_generator.hpp  particle_advector.hpp  particle_tracer.hpp  partitioner.hpp  seed_generator.hpp
pa/source/math/: tensor_field.cpp  vector_field.cpp
pa/source/stages/: color_generator.cpp  data_io.cpp  data_loader.cpp  flow_map_generator.cpp  ftle_map_generator.cpp  index_generator.cpp  particle_advector.cpp  particle_tracer.cpp  partitioner.cpp  seed_generator.cpp
pars/: CMakeLists.txt  readme.md
pars/cmake/: FindOSPRay.cmake  FindZeroMQ.cmake
pars/include/pars/: pipeline.hpp  service.hpp
pars/include/pars/stages/: ray_tracer.hpp
pars/proto/: image.proto  settings.proto
pars/source/: pipeline.cpp  service.cpp
pars/source/stages/: ray_tracer.cpp
pars_benchmark/: CMakeLists.txt
pars_benchmark/source/: main.cpp
pars_benchmark_generator/: CMakeLists.txt
pars_benchmark_generator/source/: main.cpp
pars_service/: CMakeLists.txt
pars_service/source/: main.cpp
pars_viewer/: CMakeLists.txt
pars_viewer/include/pars_viewer/: transform.hpp  viewer.hpp  viewer.ui
pars_viewer/source/: main.cpp  transform.cpp  viewer.cpp
utility/config/: data_x16_seed_stride_16x16x16_iterations_100.json  data_x16_seed_stride_16x16x16_iterations_1000.json  data_x16_seed_stride_1x1x1_iterations100.json  data_x16_seed_stride_1x1x1_iterations_1000.json  data_x16_seed_stride_4x4x4_iterations_100.json  data_x16_seed_stride_4x4x4_iterations_1000.json  data_x16_seed_stride_8x8x8_iterations_100.json  data_x16_seed_stride_8x8x8_iterations_1000.json  data_x1_seed_stride_16x16x16_iterations_100.json  data_x1_seed_stride_16x16x16_iterations_1000.json  data_x1_seed_stride_1x1x1_iterations100.json  data_x1_seed_stride_1x1x1_iterations_1000.json  data_x1_seed_stride_4x4x4_iterations_100.json  data_x1_seed_stride_4x4x4_iterations_1000.json  data_x1_seed_stride_8x8x8_iterations_100.json  data_x1_seed_stride_8x8x8_iterations_1000.json  data_x2_seed_stride_16x16x16_iterations_100.json  data_x2_seed_stride_16x16x16_iterations_1000.json  data_x2_seed_stride_1x1x1_iterations100.json  data_x2_seed_stride_1x1x1_iterations_1000.json  data_x2_seed_stride_4x4x4_iterations_100.json  data_x2_seed_stride_4x4x4_iterations_1000.json  data_x2_seed_stride_8x8x8_iterations_100.json  data_x2_seed_stride_8x8x8_iterations_1000.json  data_x4_seed_stride_16x16x16_iterations_1000.json  data_x4_seed_stride_1x1x1_iterations100.json  data_x4_seed_stride_1x1x1_iterations_1000.json  data_x4_seed_stride_4x4x4_iterations_100.json  data_x4_seed_stride_4x4x4_iterations_1000.json  data_x4_seed_stride_8x8x8_iterations_100.json  data_x4_seed_stride_8x8x8_iterations_1000.json  data_x8_seed_stride_16x16x16_iterations_100.json  data_x8_seed_stride_16x16x16_iterations_1000.json  data_x8_seed_stride_1x1x1_iterations100.json  data_x8_seed_stride_1x1x1_iterations_1000.json  data_x8_seed_stride_4x4x4_iterations_100.json  data_x8_seed_stride_4x4x4_iterations_1000.json  data_x8_seed_stride_8x8x8_iterations_100.json  data_x8_seed_stride_8x8x8_iterations_1000.json  msa_full_16x16x16_1000.json  (+7 more)
utility/plot/: .gitignore  figure-3.ai  figure_1.ai  figure_1.py  figure_2.ai  figure_2.py  figure_3.py  gantt.html  gantt_chart.py  load_balancing.py  parse.py  scaling.html  scaling.py
utility/shell/: batch_run_test_benchmark.zsh  load_common_modules.zsh  make.sh  make_run_test_benchmark.sh  run_benchmark.sh  run_service.sh
utility/shell/fzj/: batch_run_test_benchmark.sh  load_common_modules.sh  make.sh  run_benchmark.sh  run_service.sh
utility/shell/rwth/: batch_run_test_benchmark.zsh  compute_ftle.json  compute_ftle.sh  load_common_modules.zsh  make.sh  make_run_test_benchmark.sh  render_ftle.json  render_ftle.sh  run_all_benchmarks.sh  run_benchmark.sh  run_gantt_benchmarks.sh  run_integrator_benchmarks.sh  run_service.sh  run_strong_scaling_benchmarks.sh  run_weak_scaling_vary_iterations_benchmarks.sh  run_weak_scaling_vary_stride_benchmarks.sh
